# bage

./: .gitignore  .goreleaser.yml  .mcp.json  BAGE_DOGFOOD_FINDINGS.md  CASCADE_METHODOLOGY.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  HYLLA_NODE_CONTRACT.md  LICENSE  README.md  R_SHIP_HANDOFF.md  SECURITY.md  SPEC.md  code_graph_architecture.md  go.mod  go.sum  magefile.go
.claude/: settings.json
.claude/agents/: ta-closeout.md  ta-go-build-qa-falsification.md  ta-go-build-qa-proof.md  ta-go-builder.md  ta-go-plan-qa-falsification.md  ta-go-plan-qa-proof.md  ta-go-planning.md
.claude/hooks/: post_tooluse_agent_audit.py  ta_action_gate.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  release.yml
cmd/bage/: create_test.go  diagnose.go  diagnose_test.go  editformat_test.go  editresults_test.go  main.go  main_test.go  read.go  read_test.go  show.go  show_test.go
docs/adr/: 0001-bage-architecture.md  0002-parser-engine.md  0003-region-anchored-edits-and-concurrency.md  0004-file-lifecycle-ops.md  0005-read-serialization-error-taxonomy.md  0006-clipboard-and-insertion-primitives.md
rust/: Cargo.toml
rust/src/: edit.rs  format.rs  hashing.rs  inspect.rs  lib.rs  lsp.rs  main.rs  normalize.rs  parser.rs  region.rs  render.rs  session.rs  wal.rs
rust/testdata/toon/: read.json  show.toon
src/: atomicwrite.rs  clipboard.rs  edit.rs  editor.rs  facts.rs  inspect.rs  lib.rs  lsp.rs  main.rs  parser.rs  region.rs  tier2.rs
tests/: lsp_containers.rs
(+86 files in other folders)
